--- a/local/StakeholderOutputVariables.env
+++ b/local/StakeholderOutputVariables.env
@@ -19,5 +19,5 @@ export AuthorTagline="Your.Tagline.Here."
 export AuthorLogo=""
 export SourceCode="https://git.knownelement.com/reachableceo/MarkdownResume-Pipeline"
 export URLCOLOR="blue"
-export PAGEBACKGROUND="./background5.pdf"
+export PAGEBACKGROUND="$PipelineClientWorkingDir/build/background5.pdf"
 export PANDOC_TEMPLATE="eisvogel"
