--- a/local/StakeholderOutputVariables.env
+++ b/local/StakeholderOutputVariables.env
@@ -21,3 +21,4 @@ export SourceCode="https://git.knownelement.com/reachableceo/MarkdownResume-Pipe
 export URLCOLOR="blue"
 export PAGEBACKGROUND="$PipelineClientWorkingDir/build/background5.pdf"
 export PANDOC_TEMPLATE="eisvogel"
+export YamlInputTemplateFileStakeholderOutput="$PipelineClientWorkingDir/build/BuildTemplate-StakeholderOutput.yml"
