--- a/local/StakeholderOutputVariables.env
+++ b/local/StakeholderOutputVariables.env
@@ -3,12 +3,13 @@
 ###################################################
 
 #############################################################################
-#SET THIS NEXT VARIABLE OR NOTHING WILL WORK!!!!
+#SET THESE VARIABLES OR NOTHING WILL WORK!!!!
 
 export PipelineClientWorkingDir="D:/tsys/@ReachableCEO/DSR-Pipeline-ClientExample/local"
+export StakeholderOutputMarkdownInputFile="$1"
 
-#SET THE PREVIOUS VARIABLE OR NOTHING WILL WORK!!!!
 #############################################################################
+
 
 ##########################################
 # Layout/title page /formatting options
@@ -22,3 +23,23 @@ export URLCOLOR="blue"
 export PAGEBACKGROUND="$PipelineClientWorkingDir/build/background5.pdf"
 export PANDOC_TEMPLATE="eisvogel"
 export YamlInputTemplateFileStakeholderOutput="$PipelineClientWorkingDir/build/BuildTemplate-StakeholderOutput.yml"
+
+################################################################### 
+# Output Artifact variables
+################################################################### 
+
+export BUILD_TEMP_DIR="$PipelineClientWorkingDir/build-temp"
+export BUILD_OUTPUT_DIR="$PipelineClientWorkingDir/build-output"
+export BUILDYAML_STAKEHOLDER_OUTPUT="$BUILD_TEMP_DIR/StakeholderOutput.yml"
+
+export StakeholderOutputMarkdownOutputFile="$BUILD_OUTPUT_DIR/StakeholderOutput.md"
+export StakeholderOutputPDFOutputFile="$BUILD_OUTPUT_DIR/StakeholderOutput.pdf"
+
+################################################################### 
+# Publish variables
+################################################################### 
+
+export DISCOURSE_URL=""
+export DISCOURSE_API_USERNAME=""
+export DISCOURSE_CATEGORY_ID=""
+export DISCOURSE_POST_TITLE=""
